# Neptune

./: .gitignore  Cargo.toml  README.md
neptune_convert/: Cargo.toml
neptune_convert/src/: main.rs
neptune_core/: Cargo.toml
neptune_core/shaders/: compile_shader.bat  imgui.frag  imgui.frag.spv  imgui.vert.spv
neptune_core/src/: buffer.rs  debug_messenger.rs  framebuffer.rs  id_pool.rs  image.rs  imgui_docking.rs  imgui_layer.rs  index_pool.rs  lib.rs  new_render_interface.rs  render_backend.rs  render_graph.rs  resource.rs  resource_deleter.rs  scene_layer.rs  swapchain.rs  transfer_queue.rs
neptune_core/src/render_graph/: compiled_pass.rs  mod.rs  pipeline_cache.rs  render_graph.rs  renderer.rs
neptune_core/src/vulkan/: buffer.rs  debug_messenger.rs  descriptor_set.rs  framebuffer.rs  image.rs  mod.rs  static_descriptor_set.rs  swapchain.rs
neptune_editor/: Cargo.toml  build.rs
neptune_editor/resource/: NeptuneResources.glb  PurpleCube1.glb  PurpleCube2.glb
neptune_editor/resource/shader/: fullscreen_quad.vert  fullscreen_storage_copy.frag  mesh.frag  mesh_static.vert  triangle.frag  triangle.vert
neptune_editor/shader/: imgui.frag  imgui.vert  red.wgsl  triangle.frag  triangle.vert  triangle.wgsl
neptune_editor/src/: camera.rs  debug_camera.rs  editor.rs  entity.rs  gltf_loader.rs  imgui_layer.rs  input_system.rs  main.rs  material.rs  mesh.rs  physics_world.rs  renderer.rs  scene_layer.rs  shader.rs  transform.rs  triangle_pass.rs  world.rs
neptune_editor/src/game/: entity.rs  mod.rs  object.rs  player.rs  ship.rs  transform.rs  world.rs
neptune_editor/src/input/: mod.rs  sdl2.rs  winit.rs
neptune_editor/src/physics/: character.rs  mod.rs  physics_world.rs
neptune_editor/src/platform/: mod.rs  sdl2.rs
neptune_editor/src/rendering/: camera.rs  material.rs  mesh.rs  mod.rs  renderer.rs
neptune_editor/src/scene/: scene_renderer.rs
neptune_editor/src/universe/: components.rs  entity.rs  mod.rs  system.rs  world.rs
neptune_graphics/: Cargo.toml
neptune_graphics/src/: buffer.rs  command_buffer.rs  device.rs  handle.rs  instance.rs  interfaces.rs  internal.rs  lib.rs  null.rs  pipeline.rs  render_graph.rs  render_graph_builder.rs  render_interface_test.rs  resource.rs  sampler.rs  shader.rs  surface.rs  test.rs  texture.rs  traits.rs  types.rs
neptune_graphics/src/interface/: device.rs  instance.rs  mod.rs  raster_api.rs
neptune_graphics/src/render_graph/: builder.rs  command_buffer.rs  framebuffer.rs  graph.rs  mod.rs  render_graph.rs  render_pass.rs
neptune_graphics/src/vulkan/: buffer.rs  command_buffer.rs  debug_messenger.rs  debug_utils.rs  descriptor_set.rs  device.rs  graph.rs  image.rs  instance.rs  mod.rs  pipeline_cache.rs  raster_api.rs  render_graph_builder.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  vulkan_graph.rs
neptune_vulkan/: Cargo.toml
neptune_vulkan/src/: basic_render_graph_builder.rs  bindless_descriptor.rs  buffer.rs  compiled_render_graph_executor.rs  compute_pipeline.rs  debug_utils.rs  descriptor_set.rs  device.rs  image.rs  instance.rs  interface.rs  lib.rs  physical_device.rs  pipeline.rs  render_graph.rs  render_graph_builder.rs  render_graph_builder2.rs  render_graph_builder_trait.rs  render_graph_executor.rs  resource_manager.rs  resource_managers.rs  resource_set.rs  sampler.rs  surface.rs  swapchain.rs  texture.rs  transfer_queue.rs  upload_queue.rs
neptune_vulkan_macro/: Cargo.toml
neptune_vulkan_macro/src/: lib.rs
saturn_editor/: Cargo.toml
saturn_editor/src/: main.rs  transform.rs  world.rs
saturn_rendering/: Cargo.toml
saturn_rendering/src/: buffer.rs  command_buffer.rs  descriptor_set.rs  device.rs  graphics.rs  id_pool.rs  image.rs  instance.rs  lib.rs  pipeline.rs  render_task.rs  swapchain.rs
src/: device.rs  graphics.rs  main.rs
