[package]
name = "neptune_editor"
version = "0.1.0"
authors = ["Joshua_Masci <iamshortman@gmail.com>"]
edition = "2021"

[build-dependencies]
shaderc = "0.8.0"

[dependencies]
neptune_graphics = { path = "../neptune_graphics"}

log = "0.4"
pretty_env_logger = "0.4"

winit = "0.27.5"
imgui = "0.11.0"
imgui-winit-support = "0.11.0"

image = "0.24.2"