[package]
name = "neptune_editor"
version = "0.1.0"
authors = ["Joshua_Masci <iamshortman@gmail.com>"]
edition = "2021"

[build-dependencies]
shaderc = "0.8.0"

[dependencies]
neptune_core = { path = "../neptune_core"}
neptune_vulkan = { path = "../neptune_vulkan" }

log = "0.4"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.5.0"
winit = "0.28.3"
image = "0.24.2"
glam = "0.24.0"
anyhow = "1.0.72"
gltf = {version =  "1.2.0", features = ["utils"] }