[package]
name = "saturn_editor"
version = "0.1.0"
authors = ["Joshua_Masci <iamshortman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
saturn_rendering = { path = "../saturn_rendering"}
image = "0.23.14"

legion = "0.4.0"
nalgebra = "0.29.0"
rapier3d = "0.11.1"
rapier3d-f64 = "0.11.1"